generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Employee {
  id        Int      @id @default(autoincrement()) @unique
  name      String
  rules     String
  day Day[]
}
model Day {
  id Int @id @default(autoincrement()) @unique
  name String
  employee Employee @relation(fields: [employeeId], references: [id])
  employeeId Int
  week Week @relation(fields: [weekId], references: [id])
  weekId Int
  lunch Lunch @relation(fields: [lunchId], references: [id])
  lunchId Int
}
model Week {
  id Int @id @default(autoincrement()) @unique
  name String @unique
  days Day[]
}

model Lunch {
  id Int @id @default(autoincrement()) @unique
  name String @unique
  day Day[]
}

model Overwrite {
  id Int @id @unique
  employee Int
}
